--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 	},
 	"type": "module",
 	"scripts": {
-		"build": "node scripts/build.js"
+		"build": "node scripts/build.js",
+		"build:demo": "node scripts/build-demo.js",
+		"test": "npm run build:demo"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
