--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/dr-vortex/elfutils.git"
+		"url": "git+https://github.com/james-pre/elfutils.git"
 	},
 	"type": "module",
 	"scripts": {
